@@ -121,7 +121,7 @@ public class KafkaCluster {
         if (running) throw new IllegalStateException("Unable to add a broker when the cluster is already running");
         AtomicLong added = new AtomicLong();
         while (added.intValue() < count) {
-            kafkaServers.computeIfAbsent(new Integer(added.intValue() + 1), id -> {
+            kafkaServers.computeIfAbsent(Integer.valueOf(added.intValue() + 1), id -> {
                 added.incrementAndGet();
                 KafkaServer server = new KafkaServer(zkServer::getConnection, id);
                 if (dataDir != null) server.setStateDirectory(dataDir);
@@ -161,7 +161,8 @@ public class KafkaCluster {
     public KafkaCluster withKafkaConfiguration(Properties properties) {
         if (running) throw new IllegalStateException("Unable to add a broker when the cluster is already running");
         if (properties != null && !properties.isEmpty()) {
-            kafkaConfig = new Properties(properties);
+            kafkaConfig = new Properties();
+            kafkaConfig.putAll(properties);
             kafkaServers.values().forEach(kafka -> kafka.setProperties(kafkaConfig));
         }
         return this;
@@ -348,6 +349,15 @@ public class KafkaCluster {
             joiner.add(server.getConnection());
         });
         return joiner.toString();
+    }
+
+    /**
+     * Get the Zookeeper port.
+     *
+     * @return the Zookeeper port
+     */
+    public int zkPort() {
+        return zkServer.getPort();
     }
 
     private void shutdownReliably(KafkaServer server) {
@@ -798,7 +808,7 @@ public class KafkaCluster {
             produceIntegers(messageCount, completionCallback, () -> {
                 long i = counter.incrementAndGet();
                 String keyAndValue = Long.toString(i);
-                return new ProducerRecord<String, Integer>(topic, keyAndValue, new Integer((int) i));
+                return new ProducerRecord<String, Integer>(topic, keyAndValue, Integer.valueOf((int) i));
             });
         }
 
